--- a/trail_slayer/app/assets/stylesheets/application.css.scss
+++ b/trail_slayer/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,13 @@
-mv app/assets/stylesheets/application.css app/assets/stylesheets/application.css.scss
-rm app/assets/stylesheets/bootstrap-generators.scss
-mv app/assets/stylesheets/bootstrap-variables.scss app/assets/stylesheets/_bootstrap-variables.scss
+@import "bootstrap-variables.scss";
+@import "bootstrap-custom-variables.scss";
+@import "bootstrap-sprockets.scss";
+@import "bootstrap.scss";
+
+body {
+  padding-top: $navbar-height + 10px;
+}
+
+main {
+  margin: 20px auto;
+  width: 800px;
+}
