Added MVC CRUD for User

--- a/trail_slayer/app/views/trails/index.html.erb
+++ b/trail_slayer/app/views/trails/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Trail
   <% end %>
-  <h1>Listing trails</h1>
+  <h1>MTB Trails</h1>
 </div>
 
 <div class="table-responsive">
