--- a/trail_slayer/app/views/trails/show.html.erb
+++ b/trail_slayer/app/views/trails/show.html.erb
@@ -3,19 +3,13 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to edit_trail_path(@trail), class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-pencil"></span>
-    Edit
-  <% end %>
-  <h1>Show trail</h1>
+
+  <h1>Trail details</h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt>Trail name:</dt>
   <dd><%= @trail.trail_name %></dd>
-
-  <dt>Photo url:</dt>
-  <dd><%= @trail.photo_url %></dd>
 
   <dt>Skill level:</dt>
   <dd><%= @trail.skill_level %></dd>
@@ -26,8 +20,6 @@
   <dt>Elevation:</dt>
   <dd><%= @trail.elevation %></dd>
 
-  <dt>Elevation change:</dt>
-  <dd><%= @trail.elevation_change %></dd>
 
   <dt>Description:</dt>
   <dd><%= @trail.description %></dd>
