--- a/trail_slayer/app/views/users/show.html.erb
+++ b/trail_slayer/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show user</h1>
+  <h1>User Details</h1>
 </div>
 
 <dl class="dl-horizontal">
