--- a/trail_slayer/app/views/trails/show.html.erb
+++ b/trail_slayer/app/views/trails/show.html.erb
@@ -17,8 +17,8 @@
   <dt>Trail type:</dt>
   <dd><%= @trail.trail_type %></dd>
 
-  <dt>Elevation:</dt>
-  <dd><%= @trail.elevation %></dd>
+  <dt>Mileage:</dt>
+  <dd><%= @trail.mileage %></dd>
 
 
   <dt>Description:</dt>
@@ -27,7 +27,6 @@
   <dt>Location:</dt>
   <dd><%= @trail.location %></dd>
 
-  <dt>User reviews:</dt>
-  <dd><%= @trail.user_reviews %></dd>
+
 
 </dl>
