--- a/trail_slayer/app/views/trails/_form.html.erb
+++ b/trail_slayer/app/views/trails/_form.html.erb
@@ -34,9 +34,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :elevation, class: "col-sm-2 control-label" %>
+    <%= f.label :mileage, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :elevation, class: "form-control" %>
+      <%= f.text_field :mileage, class: "form-control" %>
     </div>
   </div>
 
@@ -53,12 +53,7 @@
       <%= f.text_field :location, class: "form-control" %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :user_reviews, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_area :user_reviews, class: "form-control" %>
-    </div>
-  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
