--- a/trail_slayer/app/assets/stylesheets/application.css.scss
+++ b/trail_slayer/app/assets/stylesheets/application.css.scss
@@ -8,7 +8,7 @@
 
 body {
   padding-top: $navbar-height + 10px;
-
+  background-image: url("")
   }
 
 
@@ -27,11 +27,7 @@ main {
   }
 }
 
-input[type="radio"], input[type="checkbox"] {
-  width: initial;
-  height: initial;
-  margin-top: 7px;
-}
+
 
 
 .trails {
