--- a/trail_slayer/app/views/trail_reviews/index.html.erb
+++ b/trail_slayer/app/views/trail_reviews/index.html.erb
@@ -3,7 +3,11 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Trail review
   <% end %>
-  <h1>Listing trail_reviews</h1>
+  <%= link_to trails_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <h1>Trail Reviews</h1>
 </div>
 
 <div class="table-responsive">
