--- a/trail_slayer/app/views/trail_reviews/new.html.erb
+++ b/trail_slayer/app/views/trail_reviews/new.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New trail_review</h1>
+  <h1>New Trail Review</h1>
 </div>
 
 <%= render 'form' %>
