--- a/trail_slayer/app/views/trail_reviews/_form.html.erb
+++ b/trail_slayer/app/views/trail_reviews/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+ <!--  <div class="form-group">
     <%= f.label :user_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.number_field :user_id, class: "form-control" %>
@@ -23,7 +23,8 @@
     <div class="col-sm-10">
       <%= f.number_field :trail_id, class: "form-control" %>
     </div>
-  </div>
+  </div> -->
+  <%= f.hidden_field :trail_id, :value => @trail.id %>
   <div class="form-group">
     <%= f.label :review, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
