--- a/trail_slayer/app/views/trail_reviews/show.html.erb
+++ b/trail_slayer/app/views/trail_reviews/show.html.erb
@@ -7,7 +7,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show trail_review</h1>
+  <h1>Trail Reviews</h1>
 </div>
 
 <dl class="dl-horizontal">
