--- a/trail_slayer/app/views/trails/index.html.erb
+++ b/trail_slayer/app/views/trails/index.html.erb
@@ -32,6 +32,7 @@
             <td><%= trail.location %></td>
             <td><%= link_to "Details", trail %></td>
             <td><%= link_to 'Edit', edit_trail_path(trail) %></td>
+            <td><%= link_to "Reviews", new_trail_review_path(trail) %></td>
       <% end %>
     </tbody>
   </table>
