--- a/trail_slayer/app/views/trails/show.html.erb
+++ b/trail_slayer/app/views/trails/show.html.erb
@@ -31,11 +31,16 @@
 
 <%= link_to new_trail_review_path(trail: @trail.id), class: 'btn btn-default' do %>
   <span class="glyphicon glyphicon-list-alt"></span>
-  Review
+  Add Review
 <% end %>
 
 <% @trail.trail_reviews.each do |review| %>
-  <p><%= "Author: #{review.user.first_name} #{review.user.last_name} #{review.review}"%></p>
+<div class="form-group">
+  <label for="comment"></label>
+  <textarea class="form-control" rows="5" id="comment"><%= "#{review.user.first_name} #{review.user.last_name}" %>
+  <%= " #{review.review}" %> </textarea>
+
+</div>
 
 <% end %>
 
