--- a/trail_slayer/app/assets/stylesheets/application.css.scss
+++ b/trail_slayer/app/assets/stylesheets/application.css.scss
@@ -7,10 +7,19 @@
 
 body {
   padding-top: $navbar-height + 10px;
-
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d7/Slovakia_-_background_map_gery.png")
   }
 
 
+.table-responsive {
+  background-color: rgba(255,255,255,.6)
+}
+ .jumbotron {
+  background-color: rgba(255,255,255,.6)
+}
+.dl-horizontal {
+ background-color: rgba(255,255,255,.6)
+}
 
 main {
   margin: 50px auto;
