--- a/trail_slayer/app/assets/stylesheets/application.css.scss
+++ b/trail_slayer/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,10 @@ body {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d7/Slovakia_-_background_map_gery.png")
   }
 
+.form-control{
+    background-color: rgba(255,255,255,.6)
 
+}
 .table-responsive {
   background-color: rgba(255,255,255,.6)
 }
