changed trails index

--- a/trail_slayer/app/views/trails/index.html.erb
+++ b/trail_slayer/app/views/trails/index.html.erb
@@ -30,7 +30,7 @@
             <td><%= trail.mileage %></td>
             <td><%= trail.description %></td>
             <td><%= trail.location %></td>
-            <td><%= link_to "Details", trail %></td>
+            <td><%= link_to "Reviews", trail %></td>
             <td><%= link_to 'Edit', edit_trail_path(trail) %></td>
 
 
