--- a/trail_slayer/app/views/trail_reviews/new.html.erb
+++ b/trail_slayer/app/views/trail_reviews/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to trails_path, class: 'btn btn-default' do %>
+  <%= link_to trail_path(params[:trail]), class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
