--- a/trail_slayer/app/views/static_pages/about.html.erb
+++ b/trail_slayer/app/views/static_pages/about.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'About') %>
 <h2>Trail finding app for mountain biking</h2>
 <h4>Technologies include:</h4>
+<p>Trail slayer is a mountain bike trail info app for the Atlanta area. Users can add trails and add reviews to existing trails.<p>
 <ul>
   <li><a href="https://www.ruby-lang.org/">Ruby 2.2</a></li>
   <li><a href="http://rubyonrails.org/">Rails 4.2</a></li>
