--- a/trail_slayer/app/views/static_pages/home.html.erb
+++ b/trail_slayer/app/views/static_pages/home.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'Home') %>
-<div class="text-center jumbotron">
-  <h1>TRAIL SLAYER</h1>
+<body class="homepage">
+<div class="text-center jumbotron signin" >
+  <h1 class="trailslayer">TRAIL SLAYER</h1>
  <br/>
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   <%= link_to "Sign in",      signin_path, class: "btn btn-large btn-primary" %>
 
 </div>
 
+</body>
