--- a/trail_slayer/app/views/users/show.html.erb
+++ b/trail_slayer/app/views/users/show.html.erb
@@ -10,10 +10,10 @@
     Back
   <% end %>
 
- <!--  <%= form_for @user, method: :delete do |f| %>
+  <%= form_for @user, method: :delete do |f| %>
   <%= f.submit "Delete!", class: 'btn btn-primary' %>
   <% end %>
- -->
+
   <h1>User Details</h1>
 </div>
 
