--- a/trail_slayer/app/assets/stylesheets/application.css.scss
+++ b/trail_slayer/app/assets/stylesheets/application.css.scss
@@ -3,30 +3,47 @@
 @import "bootstrap-custom-variables.scss";
 @import "bootstrap-sprockets.scss";
 @import "bootstrap.scss";
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
+.signin{
+  margin-top: 90px;
+}
+.homepage{
+  background-image: url("http://p.vitalmtb.com/photos/users/2748/photos/50056/s1600_2012_Northwest_03.jpg?1360886259")
+}
+.trailslayer{
+  font-family: 'Permanent Marker', cursive;
+  color: red;
 
-
+}
 body {
   padding-top: $navbar-height + 10px;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d7/Slovakia_-_background_map_gery.png")
   }
 
 .form-control{
-    background-color: rgba(255,255,255,.6)
+  background-color: rgba(255,255,255,.6)
 
 }
 .table-responsive {
   background-color: rgba(255,255,255,.6)
 }
  .jumbotron {
-  background-color: rgba(255,255,255,.6)
+  background-color: rgba(255,255,255,.5);
+
+}
+.btn-primary{
+  background-color: green;
 }
 .dl-horizontal {
- background-color: rgba(255,255,255,.6)
+background-color: rgba(255,255,255,.6);
+padding-top: 20px;
+padding-bottom: 20px;
+
 }
 
 main {
   margin: 50px auto;
-  width: 800px;
+  width: 1000px;
 }
 
 .page-header {
@@ -38,9 +55,6 @@ main {
     margin-right: 8px;
   }
 }
-
-
-
 
 .trails {
   th, td {
