--- a/trail_slayer/app/views/trails/index.html.erb
+++ b/trail_slayer/app/views/trails/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-hover">
+  <table class="table">
     <thead>
       <tr>
             <th>Trail name</th>
